fixed overflow

--- a/src/app/layout.module.css
+++ b/src/app/layout.module.css
@@ -4,8 +4,8 @@
   display: flex;
   height: 100vh;
   width: 100vw;
-  overflow: hidden;
   font-family: Montserrat, sans-serif;
+  overflow: hidden;
 }
 
 .sidebar {
@@ -57,7 +57,9 @@
 .main {
   flex-grow: 1;
   position: relative;
-  overflow: hidden;
+
+  height: 100vh;
+  overflow-y: auto;
 }
 
 /* Responsive */
