--- a/src/app/works/page.module.css
+++ b/src/app/works/page.module.css
@@ -4,6 +4,7 @@
   align-items: center;
   flex-direction: column;
   padding: 2rem;
+  overflow-y: auto;
 }
 
 .wrapper {
